# pynlpclassifier

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/pynlpclassifier/: __init__.py  core.py  main.py  utils.py
